<resources>
    <string name="app_name">Basket</string>
    <string name="basket_title">Basket</string>
    <string name="e_mail_field">Morganfremund@gmail.com</string>
    <string name="password_field">Supersecretpassword</string>
    <string name="e_mail_label">E-mail</string>
    <string name="password_label">Password</string>
    <string name="login_button">Sign in</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="don_t_have_an_account_yet_click_here">Don\'t have an account yet? Click here</string>
    <string name="create_user_button">Sign up</string>
    <string name="create_user_title">Create user</string>
    <string name="re_type_password">re-type password</string>
    <string name="phone_create_user">Phone</string>
    <string name="your_phone_number">your phone number</string>
    <string name="private_lists">Private Lists</string>
    <string name="shared_lists">Shared Lists</string>
    <string name="add">add</string>
    <string name="owner_you">Owner: You</string>
    <string name="description_privateList">Description:</string>
    <string name="add_listitem">Add listitem</string>
    <string name="search_for_a_friend">Search for a friend</string>
    <string name="submit">Submit</string>
    <string name="buttonAddList">Button</string>
    <string name="addListNameField">Name</string>
    <string name="addListDescriptionField">Description</string>
    <string name="createListInputName">Sunday dinner</string>
    <string name="createListInputDescription">We need this for Sunday</string>
    <string name="createUserPhoneNumber">your phone number</string>
    <string name="createUserPhoneLabel">Phone</string>
    <string name="createUserRetypeLabel">re-type password</string>
    <string name="payForListitemsButton">Update</string>
    <string name="totalCostList">total is:</string>
    <string name="totalAmountOwedLabel">You owe:</string>
    <string name="sharedOwnerLabel">Owner:</string>
    <string name="sharedDescriptionLabe">Description:</string>
    <string name="addItemToSharedList">Add item to shared list</string>
    <string name="item_name">Item name</string>
    <string name="itemQuantity">1</string>
    <string name="apply">Update</string>
    <string name="placeholderCardTitle">gorcery</string>
    <string name="placeholderCardDescription">Description</string>
    <string name="toolbarTitleLogin" color="green">Login</string>
    <string name="username">username</string>
    <string name="transition_fab" translatable="false">transition_fab</string>
    <string name="account_settings">Settings</string>
    <string name="qt_list_item">1</string>
    <string name="qt_label">qt.</string>
    <string name="price_label">price</string>
    <string name="qt_hint">1</string>
    <string name="paylabel">pay</string>
    <string name="Historydatelabel">%1$s/%2$s/%3$s</string>
    <string name="title_activity_pager">pagerActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="historyLabelStats">History</string>
    <string name="private_usage">Private usage</string>
    <string name="you_and_your_friends">You and your friends usage</string>
    <string name="past_week_stats">Past week</string>
    <string name="past_month_stats">Past month</string>
    <string name="history_stats_label">History</string>
    <string name="history_and_statistics">History and statistics</string>
    <string name="placeholder_profile">Ola normann</string>
    <string name="payment_desc">Payment</string>
    <string name="listname">Listname:</string>
    <string name="membericon">membericon</string>
    <string name="placeholder">placeholder</string>
    <string name="name_item">Name</string>
    <string name="onboardingimg">onboardingimage</string>
    <string name="please_type_in_your_amount">please type in your amount</string>
    <string name="payment_amount">payment amount</string>
    <string name="private_list_count_placeholder">1</string>
    <string name="placeholder_onboard_nav">o</string>
    <string name="next_btn_onboard">Next</string>
    <string name="name_item_field">Name</string>
    <string name="new_item_private">new item private</string>
    <string name="list_size">List size:</string>
    <string name="add_friend_s_to_list">add friend(s) - optional</string>
    <string name="no_private_list_message">You have no private lists yet, create one and lets get started</string>
    <string name="no_shared_list_message">You have no shared lists yet, create one and lets get started</string>
    <string name="error_message_login">Could not authenticate</string>
    <string name="error_message_need_to_fill_out">You need to fill out the required fields to log in</string>
    <string name="no_items_label">No items yet.. add some</string>
    <string name="ownerLabel">%1$s %2$s</string>
    <string name="you_owe_label">%1$s %2$s</string>
    <string name="total_price_label">%1$s %2$s</string>
    <string name="error_list_creation_label">"You have to fill out listname
        and description to create a list"</string>
    <string name="list_size_text">%1$s %2$s %3$s</string>
    <string name="no_internet">Sorry, something went wrong, check your internet</string>
    <string name="list_size_create_list">List size:</string>

</resources>
