<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.createUserFragment">

    <Button
        android:id="@+id/buttonCreateUser"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:background="@drawable/button"
        android:text="@string/create_user_button"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/createUserEmailInput"
        android:layout_width="265dp"
        android:layout_height="65dp"
        android:layout_marginBottom="44dp"
        android:ems="10"
        android:hint="@string/e_mail_field"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/createUserPasswordInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" tools:targetApi="o" />

    <EditText
        android:id="@+id/createUserPasswordInput"
        android:layout_width="265dp"
        android:layout_height="65dp"
        android:layout_marginBottom="52dp"
        android:ems="10"
        android:hint="@string/password_field"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/createUserRetypePasswordInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" tools:targetApi="o" />

    <EditText
        android:id="@+id/createUserRetypePasswordInput"
        android:layout_width="265dp"
        android:layout_height="65dp"
        android:layout_marginBottom="48dp"
        android:ems="10"
        android:hint="@string/password_field"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/createUserPhonenumberInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" tools:targetApi="o" />

    <EditText
        android:id="@+id/createUserPhonenumberInput"
        android:layout_width="265dp"
        android:layout_height="65dp"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="40dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/your_phone_number"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/buttonCreateUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.013"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/createUserTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/create_user_title"
        android:textColor="#6200EE"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/createUserEmailInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/emailSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="20dp"
        android:text="@string/e_mail_label"
        android:textColor="#6200EE"
        app:layout_constraintBottom_toTopOf="@+id/createUserEmailInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createUserTitle"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/phoneSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="12dp"
        android:text="@string/phone_create_user"
        android:textColor="#6200EE"
        app:layout_constraintBottom_toTopOf="@+id/createUserPhonenumberInput"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/passwordSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="16dp"
        android:text="@string/password_label"
        android:textColor="#6200EE"
        app:layout_constraintBottom_toTopOf="@+id/createUserPasswordInput"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="12dp"
        android:text="@string/re_type_password"
        android:textColor="#6200EE"
        app:layout_constraintBottom_toTopOf="@+id/createUserRetypePasswordInput"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>