<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.createListFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchIdRecyclerView"
        android:layout_width="264dp"
        android:layout_height="169dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.721"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchForFriend2" />

    <EditText
        android:id="@+id/searchForFriend2"
        android:layout_width="265dp"
        android:layout_height="65dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="40dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/search_for_a_friend"
        android:inputType="textPersonName"
        android:radius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="o" />

    <Button
        android:textAllCaps="false"
        android:id="@+id/createListButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="68dp"
        android:background="@drawable/button"
        android:text="@string/submit"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.99"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/createListNameField"
        android:layout_width="265dp"
        android:layout_height="65dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/createListInputName"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/createListDescriptionField"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/createListDescriptionField"
        android:layout_width="265dp"
        android:layout_height="65dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="88dp"
        android:ems="10"
        android:hint="@string/createListInputDescription"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/createListButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/createListNameLabel"
        android:layout_width="80dp"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="68dp"
        android:text="@string/addListNameField"
        android:textAlignment="viewStart"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/createListDescriptionLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listsize"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/createListDescriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="224dp"
        android:text="@string/addListDescriptionField"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/createListDescriptionField"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/listsize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="204dp"
        android:text="List size: "
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addFriendsCreateListText" />

    <TextView
        android:id="@+id/errorCreateList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listsize" />

    <TextView
        android:id="@+id/addFriendsCreateListText"
        android:layout_width="95dp"
        android:layout_height="71dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="56dp"
        android:text="@string/add_friend_s_to_list"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/searchForFriend2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>