<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.privateListFragment">

    <ScrollView
        android:id="@+id/scrollViewPrivateList"
        android:layout_width="334dp"
        android:layout_height="393dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toTopOf="@+id/applyChanges"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

    <TextView
        android:id="@+id/privateListDescriptionField"
        android:layout_width="222dp"
        android:layout_height="99dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/privateListName"
        android:layout_width="83dp"
        android:layout_height="32dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/itemNameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="64dp"
        android:ems="10"
        android:hint="@string/item_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/privateListDescriptionField"
        android:autofillHints="" />

    <Button
        android:id="@+id/applyChanges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button"
        android:text="@string/apply"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/privateListOwnerField"
        android:layout_width="77dp"
        android:layout_height="29dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/itemNameField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/privateListName"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/addItemQuantityField"
        android:layout_width="49dp"
        android:layout_height="44dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/itemQuantity"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/itemNameField"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/privateListOwnerField"
        android:autofillHints="" />

</androidx.constraintlayout.widget.ConstraintLayout>